don't reuse buf step args between calls