@@ -64,11 +64,11 @@ public class BufStep {
 
 	private State createState() {
 		String instructions = "https://docs.buf.build/installation";
-		ForeignExe exeAbsPath = ForeignExe.nameAndVersion("buf", version)
+		ForeignExe exe = ForeignExe.nameAndVersion("buf", version)
 				.pathToExe(pathToExe)
 				.versionRegex(Pattern.compile("(\\S*)"))
 				.fixCantFind("Try following the instructions at " + instructions + ", or else tell Spotless where it is with {@code buf().pathToExe('path/to/executable')}");
-		return new State(this, exeAbsPath);
+		return new State(this, exe);
 	}
 
 	@SuppressFBWarnings("SE_TRANSIENT_FIELD_NOT_RESTORED")
@@ -77,22 +77,21 @@ public class BufStep {
 		// used for up-to-date checks and caching
 		final String version;
 		final transient ForeignExe exe;
-		// used for executing
-		private transient @Nullable List<String> args;
 
-		State(BufStep step, ForeignExe exeAbsPath) {
+        State(BufStep step, ForeignExe exe) {
 			this.version = step.version;
-			this.exe = Objects.requireNonNull(exeAbsPath);
+			this.exe = Objects.requireNonNull(exe);
 		}
 
 		String format(ProcessRunner runner, String input, File file) throws IOException, InterruptedException {
-			if (args == null) {
-				args = Arrays.asList(
-						exe.confirmVersionAndGetAbsolutePath(),
-						"format",
-						file.getAbsolutePath());
-			}
-			return runner.exec(input.getBytes(StandardCharsets.UTF_8), args).assertExitZero(StandardCharsets.UTF_8);
+			return runner.exec(
+				input.getBytes(StandardCharsets.UTF_8),
+				List.of(
+					exe.confirmVersionAndGetAbsolutePath(),
+					"format",
+					file.getAbsolutePath()
+				)
+			).assertExitZero(StandardCharsets.UTF_8);
 		}
 
 		FormatterFunc.Closeable toFunc() {
